# krakenflex_test

./: README.md  api_requests.py  config.ini  filter.py  main.py  models.py  pyproject.toml  test_api_requests.py  test_filter.py  test_models.py
src/: api_requests.py  filter.py  models.py
tests/: test_api_requests.py  test_filter.py  test_models.py
